Correction of some misspelling and subscriptions

--- a/Kafka.Services.Payment/appSettings.json
+++ b/Kafka.Services.Payment/appSettings.json
@@ -11,8 +11,8 @@
     },
     "Consumer": {
       "BootStrapServers": "localhost:9092",
-      "GroupId": "ValidateOrders-1",
-      "TopicName": "ValidateOrders"
+      "GroupId": "ValidatedOrders-1",
+      "TopicName": "ValidatedOrders"
     },
     "AllowedHosts": "*"
   }
