--- a/Kafka.Services.Reporting/Kafka.Services.Reporting.csproj
+++ b/Kafka.Services.Reporting/Kafka.Services.Reporting.csproj
@@ -15,4 +15,10 @@
     <ProjectReference Include="..\Kafka.Domain\Kafka.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appSettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
